fix link/add missing image

--- a/content/8-posters/53.md
+++ b/content/8-posters/53.md
@@ -73,7 +73,7 @@ A spun-yarn polyester fabric was considered a good lining fabric due to its avai
 
 ### Lining Table
 
-A stiff, solid support was desired during the lining process to assist in mitigating the planar distortions present in original support. As a conventional low-pressure table would have been too small, a makeshift adaptive lining table was constructed ([fig. 53.2](#fig-53-2)). The lining table described is an adaptation of the low-pressure envelope used in the mist-lining process (see [Seymour, Strombek, and Van Och](/9-present-practice/21/) in this volume). Vinyl flooring was laid on the wooden floor, creating a firm, smooth surface with sufficient cushioning for any painted impasto areas. This was covered with a thick HDPE plastic sheet. This sheet extended beyond the vinyl and was stretched and secured taut to the floor with tape to prevent movement during lining. This sheet was punctured with holes to ensure that the painting, placed facedown, and lining canvas conform to the vinyl substrate during lining. This provided the required resistance during lining to apply pressure to high points, such as the raised edges of the folds of the original canvas. This plastic sheet provides the lower side of the lining table. A piece of open-weave cotton cheesecloth was placed over this plastic sheet to increase airflow within the lining envelope.
+A stiff, solid support was desired during the lining process to assist in mitigating the planar distortions present in original support. As a conventional low-pressure table would have been too small, a makeshift adaptive lining table was constructed ([fig. 53.2](#fig-53-2)). The lining table described is an adaptation of the low-pressure envelope used in the mist-lining process (see [Seymour, Strombek, and Van Och](/2-present-practice/9/) in this volume). Vinyl flooring was laid on the wooden floor, creating a firm, smooth surface with sufficient cushioning for any painted impasto areas. This was covered with a thick HDPE plastic sheet. This sheet extended beyond the vinyl and was stretched and secured taut to the floor with tape to prevent movement during lining. This sheet was punctured with holes to ensure that the painting, placed facedown, and lining canvas conform to the vinyl substrate during lining. This provided the required resistance during lining to apply pressure to high points, such as the raised edges of the folds of the original canvas. This plastic sheet provides the lower side of the lining table. A piece of open-weave cotton cheesecloth was placed over this plastic sheet to increase airflow within the lining envelope.
 
 {% figure 'fig-53-2' %}
 
@@ -92,6 +92,8 @@ Bands of glass-fiber interleaf were laid onto the painting’s reverse, slightly
 The activation of the adhesive bonding the lining canvas to the interleaf and the interleaf to the original support was done in situ. The dry adhesive was reactivated using solvent vapors: xylene and ethanol (30:70). Cheesecloth was chosen as a carrier for the vapors due to its ability to absorb polar solvents easily. The solvent delivery cloth measured slightly larger than the surface area of the applied adhesive. The cloth was rolled into a tight bundle and wrapped with cling film (Saran wrap). A precalculated amount of solvent was then injected (75–80 ml per m<sup>2</sup>), and the roll was clamped for several hours to guarantee an even distribution of the solvents within the roll. At that point, the roll was unwrapped and placed quickly (to reduce evaporation loss) on top of the prepositioned, lining canvas. A string was attached to each corner of the solvent delivery cloth before the cloth was folded, rolled, and wrapped to help speed distribution over the reverse.
 
 To ensure the tightest possible contact between lining fabric and cheesecloth, the green foil was repositioned and the motor activated (50 mbar). After approximately twenty minutes, the motor was deactivated and the cheesecloth replaced with a heavy woolen fabric to absorb any excess solvent vapors present within the envelope, thus accelerating the bonding process. The package was then re-covered with the green foil, and the motor was reactivated (110 mbar) ([fig. 53.5](#fig-53-5)). After about two hours, the motor was switched off and the upper lightweight HDPE plastic sheet was removed to allow the remaining solvent vapors to evaporate.[^10]
+
+{% figure 'fig-53-5' %}
 
 ## Conclusion
 
