make figures larger

--- a/content/8-posters/59.md
+++ b/content/8-posters/59.md
@@ -26,7 +26,7 @@ During the past decades, the criterion of minimal intervention has acquired grea
 
 An internal auxiliary frame equipped with a magnetic system (IAFMS) has been developed by the authors to assist the conservator in maintaining tension during conservation procedures involving thread-by-thread suture for tear mending, textile intarsia, and reinforcement with thread bridges. The frame is equipped with a magnetic system on the inner and outer edges, consisting of different magnets embedded flush with each edge and a U-shape iron gutter, adequately protected ([fig. 59.1](#fig-59-1)). The magnets holding the gutter allow the gutter to be raised and lowered to bring the threads closer to the surface of the damaged canvas. Different magnets are housed in the gutter; these act as a clamp and allow the textile material (the necessary threads with the warp and weft) to be held according to the needs of the tear, gap, or break in the textile support. In addition, the system allows the application of a minimum tension by means of the tensioners composed of stainless-steel dowels and threaded rods and nuts placed in the four corners of the frame. In short, the IAFMS allows the tension of the threads to be maintained and exactly positioned during treatment, thus facilitating the adhesion of the suture. At the end of the procedure, the frame and the excess threads are removed from the treated area.
 
-{% figure 'fig-59-1' %}
+{% figure 'fig-59-1' 'pdf-two-column' %}
 
 ## Materials and Methods
 
@@ -60,7 +60,7 @@ To carry out the local treatments on the support—thread-by-thread suture, text
 
 Yarns extracted from the textile used for each model were used. They were laid by both the traditional method and by IAFMS ([fig. 59.2](#fig-59-2)). The adhesive selected for the sutures and the textile intarsia was 10% starch paste and 20% sturgeon glue; a small drop was deposited with a brush on each thread to be sutured. In the case of the reinforcement bridges, the threads were impregnated with Plextol B500. Each new thread was aligned and placed in its exact position and kept taut at a value of 1 N/cm as the adhesive was reactivated with a thermal spatula.
 
-{% figure 'fig-59-2' %}
+{% figure 'fig-59-2' 'pdf-two-column' %}
 
 ## Results and Discussion
 
@@ -94,7 +94,7 @@ The first painting was an eighteenth-century representation of the Virgin and Ch
 
 The adhesive was chosen for suturing thread by thread: 10% starch paste and 20% sturgeon glue in water (1:1). Natural linen threads 2297, 170 g/m², were used and maintained at a tension of 1 N/cm thanks to the IAFMS ([fig. 59.3](#fig-59-3)). At the end of the operation, the textile support showed a tension of 3.2 N/cm in the treated area. For the reinforcement bridges, the same natural linen threads were used, but impregnated with Plextol B500. The tension applied with Q-20-10-02-N magnets and the IAFMS was 1.5 N/cm. Once the treatment was finished, the treated area maintained a tension value of 3.0 N/cm.
 
-{% figure 'fig-59-3' %}
+{% figure 'fig-59-3' 'pdf-two-column' %}
 
 ### Case Study 2
 
@@ -102,7 +102,7 @@ The second work was an oil painting on cotton cloth, dating from the twentieth c
 
 Cotton fabric threads, 320 g/m² ([fig. 59.4](#fig-59-4)), were used, along with 10% starch paste and 20% sturgeon glue in water (1:1) as adhesive for the textile intarsia. Because a water-based adhesive was used, small dots were applied to the ends of each thread. The tension of the new threads was 1 N/cm, and after the operation was completed, the treated area had a tension of 3.5 N/cm.
 
-{% figure 'fig-59-4' %}
+{% figure 'fig-59-4' 'pdf-two-column' %}
 
 ## Conclusions
 
