--- a/content/8-posters/61.md
+++ b/content/8-posters/61.md
@@ -24,7 +24,7 @@ abstract: "This case study discusses the extent of damage caused by termite atta
 
 Victoria Memorial Hall, in Kolkata, India, holds a vast collection of important historical artifacts and documents from the British Colonial period (eighteenth and nineteenth centuries) and houses one of the largest collections of Western oil paintings in India. One of the museum’s major galleries is the Royal Gallery, which displays the large-scale painting *The State Entry into Delhi by Lord and Lady Curzon, Delhi Durbar (1903)* by Roderick Dempster MacKenzie (1865–1941) ([fig. 61.1](#fig-61-1)). The conservation of this painting is of paramount importance to the museum and its staff.
 
-{% figure 'fig-61-1' %}
+{% figure 'fig-61-1' 'pdf-two-column' %}
 
 A long-standing collaboration between experts in the structural conservation of paintings and the museum’s conservation department has been ongoing since the 1990s. The Calcutta Tercentenary Trust project (1990–2002) allowed a team of British, European, and American visiting conservators to instruct Indian colleagues in current lining practices applicable to Kolkata’s climate. More recent training of members of the conservation team of the museum through the Indian Conservation Fellowship Program has paved the way for a more updated approach. These international collaborations and supports allowed the museum conservation team to devise a treatment plan suitable for this large-scale canvas painting.
 
