--- a/content/8-posters/62.md
+++ b/content/8-posters/62.md
@@ -8,7 +8,7 @@ contributor:
   - first_name: "Anne"
     last_name: "Carter"
     title: "Paintings Conservator"
-    affiliation: "Queensland Art Gallery, Gallery of Modern Art, Brisbane, Australia"
+    affiliation: "Queensland Art Gallery | Gallery of Modern Art, Brisbane, Australia"
     sort_as: "1"
   - first_name: "Lynn"
     last_name: "Chua"
@@ -28,7 +28,7 @@ contributor:
   - first_name: "Gillian"
     last_name: "Osmond"
     title: "Paintings Conservator"
-    affiliation: "Queensland Art Gallery, Gallery of Modern Art, Brisbane, Australia"
+    affiliation: "Queensland Art Gallery | Gallery of Modern Art, Brisbane, Australia"
     sort_as: "5"
   - first_name: "Joey"
     last_name: "Ng"
@@ -63,7 +63,7 @@ A summary of results is presented below. More detailed analysis for each sample 
 
 Cross sections were prepared, and four priming layer stratigraphies were identified in visible light. Thirty-two percent of samples contained single priming layers, often with irregular thickness. Others appeared as double layers in three stratigraphies: equal layer thickness, with the bottom layer sometimes irregular in thickness and usually opaque (30%); thin layer over thick, with the bottom layer often irregular in thickness (19%); thick layer over thin, with the bottom layer sometimes transparent or opaque and continuous or noncontinuous (19%). The multiple priming layers specified by suppliers were not always discernible.
 
-## Binder
+### *BINDER*
 
 The top surface of priming layers was characterized using ATR-FTIR ([table 62.1](#table-62-1), [fig. 62.1](#fig-62-1)) ({% cite 'Osmond et al. 2018' %}). At this surface layer, forty-nine of the fifty-three canvas samples contained synthetic polymer binders and four samples contained oil priming. Styrenated-acrylic predominated as a binder, followed by acrylic and acrylic–polyvinyl acetate (PVAc) binders. No alkyd binders were found.
 
