Split images in a/b/c parts as needed

--- a/content/1-history/1.md
+++ b/content/1-history/1.md
@@ -91,7 +91,7 @@ Similarly, if we add a consolidating or lining adhesive that can become acidic o
 
 Enclosure on display or in storage to reduce moisture exchange and deposition of external pollution, such as nitrogen dioxide and particulates, is an important conservation measure ({% cite 'McClure 2012' %}) and a more sustainable alternative to air-conditioning, but measurements within enclosures demonstrate that we have to be careful in its use ([fig. 1.7](#fig-1-7)).
 
-{% figure 'fig-1-7' %}
+{% figuregroup '2' 'fig-1-7-a, fig-1-7-b' '**Figure 1.7** Two separate studies showing that below 0.5–1.0 air exchanges per day, the air concentration of internally generated volatile pollution soars. (a) Large-volume display cases (Thickett et al. 2007). (b) Various narrow painting frames and cases (Grøntoft et al. 2011). See Hackney 2016. Image: Stephen Hackney' %}
 
 The concentration in air is not in itself a measure of reaction rate, but it shows that more molecules are available to react. Below 0.5 AER (air exchange rate), the rate of off-gassing of acetic acid, both from the packaging and (some) from the object, exceeds the combined leakage rate and rate of deposition or reaction, the latter being slow processes. When reactive molecules collide, only a small proportion reacts, but in these circumstances trapped pollution molecules can collide many times and will eventually react. The introduction of sacrificial adsorbers or reactants might therefore be useful, provided they are placed close to the object.
 
