--- a/content/1-history/5.md
+++ b/content/1-history/5.md
@@ -35,7 +35,7 @@ Other testimonies regarding the activity of the Arazzeria between 1761 and 1768 
 
 In the Reale Arazzeria, several painters, including Girolamo Storace, Giuseppe Bonito, and Orlando Filippini, were engaged to create oil paintings that served as a guide to tapestry weaving ([fig. 5.1](#fig-5-1)). Ranzenò supplied them with prepared canvases on which to make their models, and for this reason in the documents he is called “*mesticatore*” ({% cite 'Siniscalco 1979' '282' %}), from *mestica*, the mixture with which the canvases were prepared for painting. But we also find him at work in other activities closely related to those of the painters active for the Arazzeria, which he assisted with all aspects relating to the preparation of the supports.
 
-{% figure 'fig-5-1' %}
+{% figuregroup '2' 'fig-5-1-a, fig-5-1-b' '**Figure 5.1** (a) Pietro Duranti (Italian, 1710–1791, *Allegoria dell’Aurora*, ca. 1768. Tapestry. (b) Giuseppe Bonito (Italian, 1707–1789), *Allegoria dell’Aurora* (model for tapestry), ca. 1768. Oil on canvas, 220 × 139 cm (86 3/5 × 54 3/4 in.). Images: (a) Napoli, Palazzo Reale; (b) Caserta, Palazzo Reale' %}
 
 A payment note dated 1763 describes the variety of these supplies. It refers to a “canvas for painting made by Giuseppe Maria Ranzenò called the Philosopher, ordered by the Court Painter D. Giuseppe Bonito to make the frieze of the tapestry by the painter Filippini,” and the canvas is described as “with its good stretcher with the crossbar, prepared with priming the color of lead white” ({% cite 'A. Spinosa 1979' '382' %}).
 
@@ -129,7 +129,7 @@ The practice of transfer was carried out very early in Naples, since at least th
 
 The restoration of a painting by Fedele Fischetti, *Noli me tangere*, from the Church of Santa Caterina da Siena ([fig. 5.7a](#fig-5-7)), in 1998,[^13] enabled us to examine a material example of a partial transfer procedure, probably carried out by the artist himself during the execution of the painting, which can be traced back to 1766–67. There are documents that refer to Fischetti’s activity as a restorer ({% cite 'Nappi 1984' '320' %}), but in this case it was possible to verify the procedure carried out long ago directly on a painting.
 
-{% figure 'fig-5-7' %}
+{% figuregroup '2' 'fig-5-7-a, fig-5-7-b' '**Figure 5.7** (a) Fedele Fischetti (Italian, 1732–1792), *Noli me tangere*. Oil on canvas, 355 × 182 cm (139 3/4 × 71 5/8 in.), from the Church of Santa Caterina da Siena, Napoli (1766–67). (b) Diagram showing the boundary line between the lower part, which retains the original canvas, and the upper part, which has undergone the partial transfer (in black) and the areas affected by old “integrations” (in green). Image: (a) Ministero dell’Interno, Fondo Edifici di Culto (F.E.C.); (b) Napoli, Museo e Real Bosco di Capodimonte, Centro Documentazione Restauro' %}
 
 Observation in raking light before restoration showed a clear difference in the surface of the lower part of the painting, which was smoother and more adherent to the canvas, while in the upper part, lifting of the poorly adhering paint layers was visible.
 
