--- a/content/8-posters/59.md
+++ b/content/8-posters/59.md
@@ -60,7 +60,7 @@ To carry out the local treatments on the support—thread-by-thread suture, text
 
 Yarns extracted from the textile used for each model were used. They were laid by both the traditional method and by IAFMS ([fig. 59.2](#fig-59-2)). The adhesive selected for the sutures and the textile intarsia was 10% starch paste and 20% sturgeon glue; a small drop was deposited with a brush on each thread to be sutured. In the case of the reinforcement bridges, the threads were impregnated with Plextol B500. Each new thread was aligned and placed in its exact position and kept taut at a value of 1 N/cm as the adhesive was reactivated with a thermal spatula.
 
-{% figure 'fig-59-2' 'pdf-two-column' %}
+{% figuregroup '3' 'fig-59-2-a, fig-59-2-b, fig-59-2-c' '**Figure 59.2** (a) Thread-by-thread suture. (b) Textile intarsia. &#40;c) Reinforcement with thread bridges. Image: Emanuel Sterp Moga' 'pdf-two-column' %}
 
 ## Results and Discussion
 
