--- a/content/3-open-questions/16.md
+++ b/content/3-open-questions/16.md
@@ -52,7 +52,7 @@ The general workflow of this study is as follows: yarn samples were taken from b
 
 The existing protocol for the zero-span tensile strength determination of paper was modified for its application to yarn samples, and a standard protocol was developed. The general rules for measuring maximum tensile strength also apply to the zero-span tensile strength. The critical difference between the protocols is the clamping distance. In reality, the clamping distance for determining the zero-span tensile strength is set to 0.1 mm in order to avoid compression of the sample. Here, we used a modified version of a testing machine that was originally developed for the analysis of historical paper ({% cite 'Lichtblau 2007' %}). We used a zwickiLine Z0.5 TS material testing machine equipped with an Xforce precision force sensor (nominal force = 500 N), pneumatic sample holders, and an adjustment system for a highly precise arrangement and guidance of the specimens. [Figure 16.1](#fig-16-1) shows the front view of the four special clamps for the zero-span tensile strength, which are arranged in pairs at a vertical distance of 0.1 mm.
 
-{% figure 'fig-16-1' %}
+{% figuregroup '2' 'fig-16-1-a, fig-16-1-b' '**Figure 16.1** (a) Zero-span clamps of the tensile strength testing machine. (b) Schematic representation of the clamps and their dimensions, side view. Images: Dirk Lichtblau (a); Theresa A. Bräunig (b)' %}
 
 In order to apply this technology to yarn samples and use it as a standard method for the study of paintings, it was modified for this project. The basis for the study is provided by the standards listed in [table 16.1](#table-16-1), from which relevant aspects were adopted. The following criteria were developed:
 
@@ -84,7 +84,7 @@ For conducting a measurement for one canvas, the following steps were performed:
 
 1.  After determining the sample mass and length, the tensile strength was measured on twelve yarn sections (5 mm each) following the standard protocol ([fig. 16.2](#fig-16-2)).
 
-    {% figure 'fig-16-2' %}
+      {% figuregroup '1' 'fig-16-2-a, fig-16-2-b' '**Figure 16.2** (a) Yarn sections (5.0 mm long) derived from one original canvas. (b) Different representative ruptured samples from artificially aged fabrics and original canvases after zero-span tensile strength measurement. Images: Theresa A. Bräunig' %}
 
 2.  To obtain a statistically significant result for the tensile strength for one canvas, it was necessary to measure twelve yarn sections with 5 mm length each. From the maximum tensile load measured in newtons, the diameter-normalized maximal tensile strength (  *f<sub>H</sub>*) was calculated following *f*<sub>H</sub> = F/Tt with Tt = fineness (in units of tex) in order to compare yarns of different fineness ({% cite 'Reumann 2000' %}).
 
@@ -108,7 +108,7 @@ From the new and artificially aged fabrics, samples of warp and weft were taken 
 
 The results of the tensile strength measurements confirm that the standard protocol we developed is applicable without any limitation to all yarn samples tested. [Figure 16.3a](#fig-16-3) shows the average of the diameter-normalized maximum tensile strength (  *f<sub>H</sub>* in N/tex) with the corresponding standard deviation for all measured samples. All results for the tensile strength lie between 0.000120 and 0.02744 N/tex. The new fabric before and after artificial aging shows the highest values, thus these samples cover the range of weak aging. The samples from the original canvases are found in the range of middle and show strong aging, making it apparent that the artificial aging was not sufficient to reflect the values of the original samples. For the artificially aged fabrics, the warps were generally more stable than the wefts—either those that were unaged or those that had been aged for shorter periods.
 
-{% figure 'fig-16-3' 'pdf-two-column' %}
+{% figuregroup '2' 'fig-16-3-a, fig-16-3-b' '**Figure 16.3** (a) Diameter-normalized maximum tensile strengths (*ƒ<sub>H</sub>*) of the measured samples, average of ten measurements. (b) Limiting viscosity numbers (GVZ) of the measured samples. Experiment temperatures: 18°C (light gray) and 19°C (dark gray). N0: new, N1: artificial aging, N2: longer artificial aging, H: original, K: warp, S: weft. Images: Theresa A. Bräunig' 'pdf-two-column' %}
 
 For the historical yarn samples from the nineteenth and twentieth centuries (H1U20–H10K19), the strength decreases with increasing age. In the region with the lowest strength, measured on the samples from the sixteenth to eighteenth century, the strength does not correlate with the age. Probably, the strength of these samples is more strongly influenced by further factors, such as aging conditions, pretreatment, and painting technique.
 
