Remove trailing slashes from base-level URLs

--- a/content/2-present-practice/12.md
+++ b/content/2-present-practice/12.md
@@ -185,4 +185,4 @@ Reflectix Double Reflective Insulation, Reflectix, Inc. https://www.reflectixinc
 
 Silicone-Coated Mylar, TALAS. https://www.talasonline.com
 
-Titebond Premium Wood Glue, Franklin International. http://www.franklininternational.com/Home.aspx
+Titebond Premium Wood Glue, Franklin International. http://www.franklininternational.com
