--- a/content/7-modern-contemporary/39.md
+++ b/content/7-modern-contemporary/39.md
@@ -149,9 +149,9 @@ The authors thank Corina E. Rogge for her technical analysis and guidance, Adam 
 
 ## Appendix A: Materials and Suppliers
 
-DMF-0.65, hexamethyldisiloxane, a linear silicone solvent (not to be confused with dimethylformamide) that is completely volatile. Average viscosity 0.65 cst at 25°C. Shepard Bros., Inc. [http://www.shepardbros.com/](http://www.shepardbros.com/)
+DMF-0.65, hexamethyldisiloxane, a linear silicone solvent (not to be confused with dimethylformamide) that is completely volatile. Average viscosity 0.65 cst at 25°C. Shepard Bros., Inc. [http://www.shepardbros.com](http://www.shepardbros.com)
 
-CSF-4 octamethylcyclotetrasiloxane, cyclic silicone solvent that is completely volatile at flash point: 59°C, Shepard Bros., Inc. [http://www.shepardbros.com/](http://www.shepardbros.com/)
+CSF-4 octamethylcyclotetrasiloxane, cyclic silicone solvent that is completely volatile at flash point: 59°C, Shepard Bros., Inc. [http://www.shepardbros.com](http://www.shepardbros.com)
 
 Dartek F-101, cast nylon film (nylon 6,6). Distributor: TALAS. [http://www.talasonline.com](http://www.talasonline.com)
 
