--- a/content/8-posters/44.md
+++ b/content/8-posters/44.md
@@ -44,7 +44,7 @@ Certain tasks precede the lining itself.
 
 Lining is a six-step process.
 
-<div class="illustrated-list">
+<div class="illustrated-list illustrated-list--narrow-figures">
 
 1.  Prepare the stretcher by adhering Beva 371 film cut to the depth of the stretcher. There should be adhesive around the perimeter of the stretcher ([fig. 44.1](#fig-44-1)).
 
