Clean up duplicate titles / short titles

--- a/content/2-present-practice/10.md
+++ b/content/2-present-practice/10.md
@@ -1,7 +1,7 @@
 ---
 label: "10"
-title: "Linking Past and Future: Forty Years a Liner in Italy"
-short_title: "Linking Past and Future"
+title: "Linking Past and Future"
+subtitle: "Forty Years a Liner in Italy"
 layout: essay
 order: 100
 contributor:
